Version 2.7
-----------
* mjd2day and day2mjd to python3
* python3
* Post DiFX 2.6

Version 2.5
-----------
* new scripts added
* update difxcopy
* adapted pcList.pl to fix in difx2fits jobmatrix output

Version 2.4
-----------
* Added filteredDifx2Fits.py 
* Added m5fb_makeheader, to generate SIGPROC filterbank header
* filterbankprep.py: Bugfixes and extensions
* Tagged DiFX-2.4 on Nov 4, 2014 

Version 2.3
-----------
* Post DiFX-2.2
* no changes yet

Version 2.2
-----------
* Post DiFX-2.1
pcList.pl:	properly treat case where FITS file has been created from
input files having different base names
* Tagged DiFX-2.2 on May 31, 2013

Version 2.1
-----------
* Version for DiFX-2.1
